--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: java
 jdk:
   - openjdk13
 
+services:
+  - postgresql
+
+before_install:
+  - psql -c 'create database grabber;' -U postgres
 # используем режим обычного пользователя для сборки проекта.
 sudo: false
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
