--- a/pom.xml
+++ b/pom.xml
@@ -148,10 +148,24 @@
                 <db.driver>org.postgresql.Driver</db.driver>
             </properties>
         </profile>
+
         <profile>
             <id>production</id>
             <properties>
                 <db.url>jdbc:postgresql://127.0.0.1:5432/grabber</db.url>
+                <db.username>${login_db}</db.username>
+                <db.password>${password_db}</db.password>
+                <db.driver>org.postgresql.Driver</db.driver>
+            </properties>
+        </profile>
+
+        <profile>
+            <id>travis</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <db.url>jdbc:postgresql://localhost/grabber</db.url>
                 <db.username>${login_db}</db.username>
                 <db.password>${password_db}</db.password>
                 <db.driver>org.postgresql.Driver</db.driver>
